// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Element /> inserts styles <Element className={...} /> 1`] = `
<div
  Component="div"
  className={
    CSSClassJoin [
      "bootstrap"
    ]
  }
/>
`;

exports[`<Element /> inserts styles <Element color="red" className={...} /> 1`] = `
<div
  Component="div"
  className={
    CSSClassJoin [
      CSSClass base {
        color: red
      }
      "bootstrap"
    ]
  }
/>
`;

exports[`<Element /> inserts styles <Element color={...} /> 1`] = `
<div
  Component="div"
  className={
    CSSClassJoin [
      CSSClass base {
        color: red
      }
    ]
  }
/>
`;

exports[`<Element /> inserts styles <Element color={...} hover={...} /> 1`] = `
<div
  Component="div"
  className={
    CSSClassJoin [
      CSSClass base {
        color: black
      }
      CSSClass base:hover {
        color: red
      }
    ]
  }
/>
`;

exports[`<Element /> inserts styles <Element focus={...} hover={...} /> 1`] = `
<div
  Component="div"
  className={
    CSSClassJoin [
      CSSClass base:focus {
        color: black
      }
      CSSClass base:hover {
        color: red
      }
    ]
  }
/>
`;

exports[`<Element /> inserts styles <Element hover={...} /> 1`] = `
<div
  Component="div"
  className={
    CSSClassJoin [
      CSSClass base:hover {
        color: red
      }
    ]
  }
/>
`;

exports[`Component-<HASH> RTL 1`] = `
CSSClassJoin [
  CSSClass base {
    color: red
  }
  "RTL"
]
`;

exports[`toClassName() 1`] = `
CSSClassJoin [
  CSSClass base {
    color: red
  }
]
`;

exports[`toClassName() 2`] = `
CSSClassJoin [
  CSSClass base {
    color: red
  }
]
`;

exports[`toClassName() 3`] = `
CSSClassJoin [
  CSSClass base {
    color: red
  }
]
`;

exports[`toClassName() 4`] = `
CSSClassJoin [
  CSSClass base {
    color: red
  }
  CSSClass some {
    color: black
  }
]
`;

exports[`toClassName() 5`] = `
CSSClassJoin [
  CSSClass base {
    color: red
  }
]
`;

exports[`toClassName() 6`] = `
CSSClassJoin [
  CSSClass base {
    color: red
  }
  "RTL"
  CSSClass some {
    color: black
  }
]
`;

exports[`toClassName() 7`] = `
CSSClassJoin [
  CSSClass base {
    color: red
  }
]
`;

exports[`toClassName() 8`] = `
CSSClassJoin [
  CSSClass base {
    color: red
  }
  "RTL"
  CSSClass rightToLeft {
    color: black
  }
]
`;

exports[`toClassName() 9`] = `
CSSClassJoin [
  CSSClass base {
    color: red
  }
  "RTL"
  CSSClass rightToLeft {
    color: black
  }
]
`;

exports[`toClassName() 10`] = `
CSSClassJoin [
  CSSClass base {
    color: red
  }
  CSSClass rightToLeft {
    color: black
  }
]
`;
